# l2log

./: .gitignore  CMakeLists.txt  logger.h  main.cpp  readme.md
docs/: index.md
src/: logger.h  main.cpp
test/: logger_test.cpp  test_main.cpp
